--- a/practice2/6-1-3/6-1-3-Sasaki.tex
+++ b/practice2/6-1-3/6-1-3-Sasaki.tex
@@ -66,8 +66,8 @@ ${\rm div\ grad}=\Delta$より$u_L$に関する項を左辺に揃えると
 \begin{align*}
   (\Delta-\epsilon\mu\partial_t^2)u_L={\rm div}{\bm A}+\epsilon\mu\partial_t\phi\tag{2'}
 \end{align*}
-よって式(1')を満たす$u_L$が存在し,それが式(2')から求まることがわかる.したがって式(2')のもとで式(2)は式(3)のように書き換わる.式(2')を満たすゲージ変換をLorentz変換と呼ぶ.\par
-ただしLorentz変換は以下を満たす$\chi$について自由度が残っている.
+よって式(1')を満たす$u_L$が存在し,それが式(2')から求まることがわかる.したがって式(2')のもとで式(2)は式(3)のように書き換わる.このゲージ変換をLorentzゲージと呼ぶ.\par
+ただしLorentzゲージは以下を満たす$\chi$について自由度が残っている.
 \begin{align}
   (\Delta-\epsilon\mu\partial_t^2)\chi=0\tag{3'}
 \end{align}
