done without figures

--- a/electoromagnetic/main.tex
+++ b/electoromagnetic/main.tex
@@ -4,10 +4,16 @@
 \usepackage{url}
 
 \usepackage{amsmath,amsfonts,amssymb}
+\usepackage{empheq}
 \usepackage{bm}
 \usepackage{siunitx}
 
 \usepackage[dvipdfmx]{graphicx}
+
+\usepackage{tikz}
+\usetikzlibrary{intersections, calc, arrows}
+\usepackage{pgfplots}
+
 \makeatletter
 \def\fgcaption{\def\@captype{figure}\caption}
 \makeatother
@@ -32,7 +38,15 @@
 \author{61908697 佐々木良輔}
 \date{}
 \maketitle
+\section*{【1】}
 \input{1-a.tex}
 \input{1-b.tex}
 \input{1-c.tex}
+\input{1-d.tex}
+\input{1-e.tex}
+\input{1-f.tex}
+\input{1-g.tex}
+\newpage
+\section*{【2】}
+\input{2-a.tex}
 \end{document}
