--- a/electoromagnetic/main.tex
+++ b/electoromagnetic/main.tex
@@ -10,9 +10,9 @@
 
 \usepackage[dvipdfmx]{graphicx}
 
-\usepackage{tikz}
-\usetikzlibrary{intersections, calc, arrows}
-\usepackage{pgfplots}
+%\usepackage{tikz}
+%\usetikzlibrary{intersections, calc, arrows}
+%\usepackage{pgfplots}
 
 \makeatletter
 \def\fgcaption{\def\@captype{figure}\caption}
