--- a/advanced_mathematics/lt/main.tex
+++ b/advanced_mathematics/lt/main.tex
@@ -33,4 +33,8 @@
 \input{1-3.tex}
 \clearpage
 \input{1-4.tex}
+\input{2-1.tex}
+\clearpage
+\input{2-2.tex}
+\bibliography{ref.bib}
 \end{document}
