--- a/advanced_mathematics/lt/2-1.tex
+++ b/advanced_mathematics/lt/2-1.tex
@@ -1,5 +1,5 @@
 \subsection*{2-1}
-図\ref{fig:data/kadai2/WaveOrigin-kadai2.png},図\ref{fig:data/kadai2/Spectrum-kadai2.png}に元波形と周波数スペクトルを示す.これらは自作のpythonスクリプト(を参照)で作成した.
+図\ref{fig:data/kadai2/WaveOrigin-kadai2.png},図\ref{fig:data/kadai2/Spectrum-kadai2.png}に元波形と周波数スペクトルを示す.これらは自作のpythonスクリプト(\ref{script})で作成した.
 pythonスクリプトではcsvデータを配列に格納し,これにnumpyライブラリのfft.fft関数を掛けている.
 この関数は以下の定義式に基づき離散Fourier変換を行う.\cite{Discrete33:online}
 \begin{align*}
